# profbit-test-task

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
web/: Dockerfile  entrypoint.sh  pyproject.toml
web/cachers/: apps.py  cachers.py  generators.py  models.py
web/cachers/migrations/: 0001_initial.py
web/products/: admin.py  mixins.py  models.py  randomizers.py  tests.py  urls.py  views.py
web/products/management/commands/: create_products.py  createproducts.py  deleteproducts.py  updateproducts.py
web/products/middleware/: fetch_cache.py  update_cache.py
web/products/migrations/: 0001_initial.py  0002_category_created_at_category_updated_at_and_more.py  0003_alter_category_options_alter_product_options.py  0004_cachedpages.py
web/products/templates/: base.html  header.html  pagination.html
web/products/templates/products/: product_list.html
web/server/: settings.py
